# FlowNote

./: .gitignore  CLAUDE.md  index.html  latest.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
noteIcon/: 111.py  123.py  321.py  IAS.cmd  clear.bat
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  floating.rs  images.rs  mod.rs  notes.rs  reminders.rs  screenshot.rs  updater.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: floating_window.rs  image.rs  mod.rs  note.rs  reminder.rs  timeline.rs
src-tauri/src/services/: scheduler.rs
src-tauri/src/window/: manager.rs  mod.rs
src/assets/styles/: global.css
src/components/editor/: EditorToolbar.vue  FindBar.vue  MilkdownEditor.vue
src/components/layout/: AreaSelectWindow.vue  CreateReminderModal.vue  EdgeDock.vue  EditorDock.vue  EditorWindow.vue  FloatingNoteWindow.vue  ImagePreviewWindow.vue  MainWindow.vue  RadialMenu.vue  ReminderBubble.vue  ReminderView.vue  ScreenshotWindow.vue  SettingsWindow.vue  TrayMenu.vue  UpdateDialog.vue
src/components/notes/: NoteCard.vue  (+4 more)
src/composables/: monitorUtils.ts  useAutoHide.ts  useAutoSave.ts  useCodeHighlight.ts  useCommandRegistry.ts  useDragDetach.ts  useEdgeDock.ts  useEditorShortcuts.ts  useEditorSync.ts  useImageDragOut.ts  useImagePaste.ts  useTauriEvent.ts  useToast.ts  useWindowClose.ts  useWordCount.ts
src/stores/: notes.ts  reminders.ts  settings.ts  windows.ts
src/types/: index.ts
(+3 files in other folders)
